--- a/app.json
+++ b/app.json
@@ -27,6 +27,14 @@
     },
     "plugins": [
       "expo-router"
-    ]
+    ],
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "51896d8f-202c-416f-ad02-a391a410018b"
+      }
+    }
   }
 }
